--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 05:34:00 PM</p>
+    <p class="lastupdate">09/07/2020 05:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.632 inHg (-0.065)</td>
+        <td class="data">29.631 inHg (-0.063)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">8 mph SW (225&#176;)</td>
+        <td class="data">7 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">90.9&#176;F</td>
+        <td class="data">91.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -305,32 +305,32 @@
         <td class="data new_row hilo_day">
           <span title="12:09:01 AM">
             29.836</span><br/>
-          <span title="05:25:02 PM">
-            29.632</span>
+          <span title="05:38:02 PM">
+            29.631</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="05:25:02 PM (Monday)">
-            29.632</span>
+          <span title="05:38:02 PM (Monday)">
+            29.631</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/07/2020 05:25:02 PM">
-            29.632</span>
+          <span title="09/07/2020 05:38:02 PM">
+            29.631</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/07/2020 05:25:02 PM">
-            29.632</span>
+          <span title="09/07/2020 05:38:02 PM">
+            29.631</span>
         </td>
         <td class="data new_row hilo_rainyear">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/07/2020 05:25:02 PM">
-            29.632</span>
+          <span title="09/07/2020 05:38:02 PM">
+            29.631</span>
         </td>
         <td class="units"> inHg</td>
       </tr>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          16
+          14
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           1<br/>
-          2
+          1
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="05:24:02 PM">
-            90.9</span><br/>
+          <span title="05:35:02 PM">
+            91.0</span><br/>
           <span title="07:35:01 AM">
             78.3</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 2 hours, 47 minutes</td>
+      <td class="data">6 days, 2 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 2 hours, 47 minutes</td>
+      <td class="data">6 days, 2 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
