--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 05:49:00 PM</p>
+    <p class="lastupdate">09/07/2020 05:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">106.7&#176;F</td>
+        <td class="data">106.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">106.7&#176;F</td>
+        <td class="data">106.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">106.7&#176;F</td>
+        <td class="data">106.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">45.5&#176;F</td>
+        <td class="data">45.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.634 inHg (-0.056)</td>
+        <td class="data">29.633 inHg (-0.054)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">5 mph SSW (202&#176;)</td>
+        <td class="data">3 mph SW (225&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">91.0&#176;F</td>
+        <td class="data">91.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          11
+          8
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 3 hours, 2 minutes</td>
+      <td class="data">6 days, 3 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 3 hours, 2 minutes</td>
+      <td class="data">6 days, 3 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
