--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 05:59:00 PM</p>
+    <p class="lastupdate">09/07/2020 06:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">106.4&#176;F</td>
+        <td class="data">106.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">106.4&#176;F</td>
+        <td class="data">106.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">106.4&#176;F</td>
+        <td class="data">106.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">45.2&#176;F</td>
+        <td class="data">50.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">13%</td>
+        <td class="data">16%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.637 inHg (-0.047)</td>
+        <td class="data">29.632 inHg (-0.051)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph NW (315&#176;)</td>
+        <td class="data">2 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          7
+          8
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 3 hours, 12 minutes</td>
+      <td class="data">6 days, 3 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 3 hours, 12 minutes</td>
+      <td class="data">6 days, 3 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
