--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 08:59:00 PM</p>
+    <p class="lastupdate">09/07/2020 09:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">90.0&#176;F</td>
+        <td class="data">90.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">90.0&#176;F</td>
+        <td class="data">90.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">90.0&#176;F</td>
+        <td class="data">90.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.4&#176;F</td>
+        <td class="data">49.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.661 inHg (0.024)</td>
+        <td class="data">29.662 inHg (0.030)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">5 mph N (0&#176;)</td>
+        <td class="data">6 mph NW (315&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">88.6&#176;F</td>
+        <td class="data">88.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -440,15 +440,15 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          9
+          8
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          2
+          1
         </td>
         <td class="data new_row hilo_month">
           1<br/>
-          2
+          1
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 6 hours, 12 minutes</td>
+      <td class="data">6 days, 6 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 6 hours, 12 minutes</td>
+      <td class="data">6 days, 6 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
